# sandbox

./: README.md
chat/: Makefile  go.mod  go.sum  go.work.sum
chat-py/: .gitignore  LLM.md  README.md  app.py  pyproject.toml  run.sh
chat-py/agent/: server.py
chat-py/chat/: __init__.py  handlers.py  llm.py  run_worker.py  storage.py  typ.py  workflows.py
chat-py/templates/: index.html  rooms.html
chat-py/tests/: __init__.py
chat/cmd/server/: main.go  main_test.go
chat/internal/chat/handlers/: conversation.go  conversation_test.go  message.go  message_test.go  service.go  service_test.go
chat/internal/storage/: conversation.go
chat/proto/: buf.gen.yaml  buf.yaml
chat/proto/chat/v1/: chat.proto
cobra-spinner/: README.md  go.mod  go.sum  main.go
consensus/: Dockerfile  Makefile  README.md  go.mod  main.go
consensus/examples/k8s/: main.go
consensus/examples/local/: main.go
consensus/k8s/: deployment.yaml  rbac.yaml
consensus/pkg/consensus/: backend.go  consensus.go
consensus/spec/: spec-NewFromEnv.md  spec.md
git-diff-review/: Makefile  README.md  go.mod  go.sum
git-diff-review/cmd/git-diff-review/: main.go
git-diff-review/internal/format/: format.go  github.go
git-diff-review/internal/git/: diff.go  diff_test.go
git-diff-review/internal/llm/: client.go
git-diff-review/internal/log/: log.go
git-diff-review/internal/reviewer/: reviewer.go  reviewer_suite_test.go  reviewer_test.go
kube-in-place-resize/: manifest.yaml  test.sh
sse-test/: README.md  go.mod  index.html  main.go
thought/: README.md
thought/proto/: buf.yaml
(+4 files in other folders)
